--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         margin-right: 10px;
         display: inline-block;
         background-color: #317891;
-        height: 36px;
+        height: 56px;
         width: 120px;
         text-color: #F5F9FC;
         padding: 4px;
@@ -113,7 +113,7 @@
     }
     .background{
     background-color:#F5F9FC;
-        opacity: .8;
+        opacity: .9;
     }
     .content {
     z-index: 90;
@@ -156,10 +156,10 @@
                 
                 <div class="click"><p><b><i>Click on a tour below:</i></b></p></div>
                 <div id="button-container">
-                    <div class="button"><div class="label"><a href="nationstour.html">Okanagan Member Communities</a></div></div>
-                    <div class="button"><div class="label"><a href="coyotetour.html">Coyote Landmark Areas</a></div></div>
-                    <div class="button"><div class="label" style="top:10px;left:28px;"><a href="lakestour.html">Water Bodies</a></div></div>
-                    <div class="button"><div class="label" style="top:10px;left:28px;"><a href="unity_runs.html">Unity Runs</a></div></div>
+                    <div class="button"><div class="label" style="margin-top:7px;"><a href="nationstour.html">Okanagan Member Communities</a></div></div>
+                    <div class="button"><div class="label" style="margin-top:7px;"><a href="coyotetour.html">Coyote Landmark Areas</a></div></div>
+                    <div class="button"><div class="label"><a href="lakestour.html">iɁ kwu syilx iɁ siwłkwtət – our syilx water</a></div></div>
+                    <div class="button"><div class="label" style="margin-top:7px;"><a href="unity_runs.html">Spirit of Syilx Unity Runs</a></div></div>
                 </div>
                 <table style="width:100%"><tr>
                 <td><div class="click2"><p style="margin-right:0px;"><b><i>Move forward in each tour by clicking</i></b></p></div></td>
