--- a/lakestour.html
+++ b/lakestour.html
@@ -48,8 +48,8 @@
   <div id="slides_container" style="display:block;">
     <div id = "wrapper" style="position:relative; margin-bottom:35px; height:100%; width:100%;">
         <div id = "corner" style="float:right">
-            <a id="smaller" href='#' style="margin-top:30px;display:none;" onclick="Shrink();"><< Smaller</a>
-            <a id= "expand" href='#' style="margin-top:30px;" onclick="Expand();">Expand >></a>
+            <a id="smaller" target="_self" href='#' style="margin-top:30px;" onclick="Shrink();"><< Smaller</a>
+            <a id= "expand" target="_self" href='#' style="margin-top:30px;display:none;" onclick="Expand();">Expand >></a>
         </div>
         <div id="dots"></div>
     
@@ -136,6 +136,8 @@ Syilx communities have always recognized and nurtured a strong connection toward
 - zoom: 10
 ```
 ![water](images/similkameenriver.jpg)
+
+Photo by Lower Similkameen Indian Band
 
 # **nx̌waqwaʔstn** • Mission Creek
 ```
