--- a/nationstour.html
+++ b/nationstour.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" href="http://voicesontheland.org/projects/ce_atlas/group_images/Okanagan_Nation_Alliance949_3.jpg">
+  
+  <base target="_blank">
 
   <!--Odyssey and Leaflet Links-->
   <link rel="stylesheet" href="http://cartodb-libs.global.ssl.fastly.net/cartodb.js/v3/themes/css/cartodb.css">
@@ -48,8 +50,8 @@
   <div id="slides_container" style="display:block;">
     <div id = "wrapper" style="position:relative; margin-bottom:35px; height:100%; width:100%;">
         <div id = "corner" style="float:right">
-            <a id="smaller" href='#' style="margin-top:30px;display:none;" onclick="Shrink();"><< Smaller</a>
-            <a id= "expand" href='#' style="margin-top:30px;" onclick="Expand();">Expand >></a>
+            <a id="smaller" target="_self" href='#' style="margin-top:30px;" onclick="Shrink();"><< Smaller</a>
+            <a id= "expand" target="_self" href='#' style="margin-top:30px;display:none;" onclick="Expand();">Expand >></a>
         </div>
         <div id="dots"></div>
     
@@ -59,7 +61,7 @@
     </div>
 
     <ul id="navButtons">
-      <div id="home-button"><a href="index.html"><center><img src="images/home_icon.svg" ></center></a></div>
+      <div id="home-button"><a target="_self" href="index.html"><center><img src="images/home_icon.svg" ></center></a></div>
       <div id= "back"><li><a class="prev" style="margin-right:50px;"><center><img style="margin-left:7px"src="odyssey/sandbox/img/back.png" height="26px" ></center></a></li></div>
       <div id= "forward"><li><a class="next" ><center><img style="margin-left:22px" src="odyssey/sandbox/img/forward.png" height="26px" ></center></a></li></div>
       
@@ -110,8 +112,8 @@
 ## #101, 3535 Old Okanagan Hwy
 ## Westbank, BC
 ## V4T 3L7
-## T: 250-707-009 
-[www.syilx.org](www.syilx.org)
+## T: 250-707-0095 
+[www.syilx.org](http://www.syilx.org)
 
 # Upper Nicola Band
 ```
@@ -125,7 +127,7 @@ Chief: Harvey McLeod
 
 Comprised of 8 reserves throughout the land base of 1600 hectares  
 
-[www.uppernicolaband.com](www.uppernicolaband.com)
+[www.uppernicolaband.com](http://www.uppernicolaband.com)
 
 ## PO Box 3700
 ## Merritt, BC V1K 1B8
@@ -144,7 +146,7 @@ Chief: Bryon Louis
 
 The Okanagan Indian Band is located at the head of the Okanagan Lake which consists of six reserves.  1800’s was the time of Okanagan Ancestors first encounter with European fur traders.
 
-[www.okib.com](www.okib.com)
+[www.okib.com](http://www.okib.com)
 
 ## 12420 Westside Road
 ## Vernon, BC V1H 2A4
@@ -164,7 +166,7 @@ Chief: Robert Louie
 
 Westbank First Nation consists of 5 reserves. The two populated reserves, Tsinstikeptum Reserves 9 and 10, border Okanagan Lake and are in close proximity to the City of West Kelowna, one of the fastest growing cities in British Columbia.
 
-[www.wfn.ca](www.wfn.ca)
+[www.wfn.ca](http://www.wfn.ca)
 
 ## 301-515 Hwy 97 South
 ## Kelowna, BC V1Z 3J2
@@ -184,7 +186,7 @@ Chief: Jonathan Kruger
 
 The Penticton Indian Band consists of 3 reserves that create the largest land base of the Okanagan Nation member communities. The land base is 19,436 hectares.
 
-[www.pib.ca](www.pib.ca)
+[www.pib.ca](http://www.pib.ca)
 
 ## 200 Westhills Drive RR#2 Site 80 Comp 19
 ## Penticton, BC V2A 6J7
@@ -205,7 +207,7 @@ Chief: Clarence Louie
 
 Placed between Oliver and Osoyoos, with a land base of 13,045 hectares.
 
-[www.oib.ca](www.oib.ca)
+[www.oib.ca](http://www.oib.ca)
 
 ## RR#3 S-25 C-1
 ## Oliver, BC V0H 1T0
@@ -225,7 +227,7 @@ Chief: Keith Crow
 
 The Lower Similkameen Indian Band is located in the Similkameen Valley  in the South Okanagan. It is divided into 11 reserves with a land base of 15,276.4 hectares.
 
-[www.lsib.net](www.lsib.net)
+[www.lsib.net](http://www.lsib.net)
 
 ## 500-7th Avenue, Keremeos, BC
 ## Mailing Address:
@@ -263,7 +265,7 @@ The Upper Similkameen Indian Band comprises of 7 reserves with a land base of 2,
 
 The Colville Reservation is known as an American Indian Tribe. The Colville Confederated Tribes Reservation land base is 2100 sq. kilometers. This Reservation was established in 1872, it formerly occupied twice the size of land.
 
-[www.colvilletribes.com](www.colvilletribes.com)
+[www.colvilletribes.com](http://www.colvilletribes.com)
 
 ## PO Box 150
 ## Nespelem Washington 99155
