--- a/year1tour.html
+++ b/year1tour.html
@@ -49,8 +49,8 @@
   <div id="slides_container" style="display:block;">
     <div id = "wrapper" style="position:relative; margin-bottom:35px; height:100%; width:100%;">
         <div id = "corner" style="float:right">
-            <a id="smaller" href='#' style="margin-top:30px;display:none;" onclick="Shrink();"><< Smaller</a>
-            <a id= "expand" href='#' style="margin-top:30px;" onclick="Expand();">Expand >></a>
+            <a id="smaller" target="_self" href='#' style="margin-top:30px;" onclick="Shrink();"><< Smaller</a>
+            <a id= "expand" target="_self" href='#' style="margin-top:30px;display:none;" onclick="Expand();">Expand >></a>
         </div>
         <div id="dots"></div>
     
@@ -103,8 +103,8 @@
 ```
 #2009
 ```
-- center: [49.8405512988814, -119.895657502366]
-- zoom: 10
+- center: [49.8405512988814, -119.695657502366]
+- zoom: 12
 ```
 ![LSIB](images/year1_1.jpg)
 
@@ -112,8 +112,8 @@ stqaɁtkwəłniwt – Tsinstikeptum 9, Westbank First Nation
 
 #2009
 ```
-- center: [49.7839441400873, -120.01787350196]
-- zoom: 10
+- center: [49.7839441400873, -119.81787350196]
+- zoom: 12
 ```
 ![LSIB](images/year1_2.jpg)
 
@@ -121,8 +121,8 @@ k’əłpəlmapqən - Peachland, BC
 
 #2009
 ```
-- center: [49.6492177153149, -119.994819363807]
-- zoom: 10
+- center: [49.6492177153149, -119.794819363807]
+- zoom: 12
 ```
 ![LSIB](images/year1_3.jpg)
 
@@ -130,8 +130,8 @@ k’əłpəlmapqən to k’łchink – Peachland to Summerland, BC
 
 #2009
 ```
-- center: [49.5140959875112, -119.917453535988]
-- zoom: 10
+- center: [49.5140959875112, -119.717453535988]
+- zoom: 12
 ```
 ![LSIB](images/year1_4.jpg)
 
@@ -139,8 +139,8 @@ k’łchink to snpíntktn – Summerland to Penticton, BC
 
 #2009
 ```
-- center: [49.3450632840535, -120.018020741127]
-- zoom: 10
+- center: [49.3450632840535, -119.818020741127]
+- zoom: 12
 ```
 ![LSIB](images/year1_5.jpg)
 
@@ -148,8 +148,8 @@ Run from Penticton to Keremeos
 
 #2009
 ```
-- center: [49.137521578551, -120.035127848344]
-- zoom: 10
+- center: [49.137521578551, -119.835127848344]
+- zoom: 12
 ```
 ![LSIB](images/year1_6.jpg)
 
@@ -157,8 +157,8 @@ kłk’ər’míws to c’uṕaq - Run from Keremeos to Chopaka, BC
 
 #2009
 ```
-- center: [49.0297652206618, -119.992489879278]
-- zoom: 10
+- center: [49.0297652206618, -119.792489879278]
+- zoom: 12
 ```
 ![LSIB](images/year1_7.jpg)
 
@@ -166,8 +166,8 @@ c’uṕaq to swíws Run from Chopaka to Osoyoos, BC
 
 #2009
 ```
-- center: [49.0789301993044, -119.861505759828]
-- zoom: 10
+- center: [49.0589301993044, -119.661505759828]
+- zoom: 12
 ```
 ![LSIB](images/year1_8.jpg)
 
@@ -175,8 +175,8 @@ kłílxw - Running past Spotted Lake
 
 #2009
 ```
-- center: [49.0352577529624, -119.780040227672]
-- zoom: 10
+- center: [49.0352577529624, -119.580040227672]
+- zoom: 12
 ```
 ![LSIB](images/year1_9.jpg)
 
@@ -184,8 +184,8 @@ swíws  - Running into Osoyoos, BC
 
 #2009
 ```
-- center: [49.185188773354, -119.833005009237]
-- zoom: 10
+- center: [49.185188773354, -119.633005009237]
+- zoom: 12
 ```
 ![LSIB](images/year1_10.jpg)
 
