--- a/year2tour.html
+++ b/year2tour.html
@@ -48,8 +48,8 @@
   <div id="slides_container" style="display:block;">
     <div id = "wrapper" style="position:relative; margin-bottom:35px; height:100%; width:100%;">
         <div id = "corner" style="float:right">
-            <a id="smaller" href='#' style="margin-top:30px;display:none;" onclick="Shrink();"><< Smaller</a>
-            <a id= "expand" href='#' style="margin-top:30px;" onclick="Expand();">Expand >></a>
+            <a id="smaller" target="_self" href='#' style="margin-top:30px;" onclick="Shrink();"><< Smaller</a>
+            <a id= "expand" target="_self" href='#' style="margin-top:30px;display:none;" onclick="Expand();">Expand >></a>
         </div>
         <div id="dots"></div>
     
@@ -102,8 +102,8 @@
 ```
 #2010
 ```
-- center: [49.8400353773659, -119.896582736094]
-- zoom: 10
+- center: [49.8400353773659, -119.696582736094]
+- zoom: 12
 ```
 ![LSIB](images/year2_1.jpg)
 
@@ -111,8 +111,8 @@ Youth dialogue in stqaɁtkwəłniwt –  Tsinstikeptum 9, Westbank First Nation
 
 #2010
 ```
-- center: [49.8849281403557, -119.830999458859]
-- zoom: 10
+- center: [49.8849281403557, -119.630999458859]
+- zoom: 12
 ```
 ![LSIB](images/year2_2.jpg)
 
@@ -120,8 +120,8 @@ Running through stqaɁtkwəłniwt – Tsinstikeptum 10, Westbank First Nation
 
 #2010
 ```
-- center: [49.884522080984, -119.728306288277]
-- zoom: 10
+- center: [49.884522080984, -119.528306288277]
+- zoom: 12
 ```
 ![LSIB](images/year2_3.jpg)
 
@@ -129,8 +129,8 @@ Running through kiʔlawnaʔ – Kelowna, BC
 
 #2010
 ```
-- center: [49.9413158668039, -119.696437636349]
-- zoom: 10
+- center: [49.9413158668039, -119.496437636349]
+- zoom: 12
 ```
 ![LSIB](images/year2_4.jpg)
 
@@ -138,8 +138,8 @@ Lunch break at University of British Columbia Okanagan, kiʔlawnaʔ – Kelowna,
 
 #2010
 ```
-- center: [50.3496215973286, -119.5969227434]
-- zoom: 10
+- center: [50.3496215973286, -119.3969227434]
+- zoom: 12
 ```
 ![LSIB](images/year2_5.jpg)
 
@@ -147,8 +147,8 @@ Start running at nk’mapəlqs – Head of Okanagan Lake, BC
 
 #2010
 ```
-- center: [50.5003914247739, -119.862907646336]
-- zoom: 10
+- center: [50.5003914247739, -119.662907646336]
+- zoom: 12
 ```
 ![LSIB](images/year2_6.jpg)
 
@@ -156,8 +156,8 @@ Running on the tmxwúlaʔxw- the land, Falkland, BC
 
 #2010
 ```
-- center: [50.4888028708439, -119.901122187345]
-- zoom: 10
+- center: [50.4888028708439, -119.701122187345]
+- zoom: 12
 ```
 ![LSIB](images/year2_7.jpg)
 
@@ -165,8 +165,8 @@ Running past Falkland, BC
 
 #2010
 ```
-- center: [50.2843752211558, -120.290479174595]
-- zoom: 10
+- center: [50.2843752211558, -120.090479174595]
+- zoom: 12
 ```
 ![LSIB](images/year2_8.jpg)
 
@@ -174,8 +174,8 @@ Running on UNIB reserve near spaxomən – Douglas Lake
 
 #2010
 ```
-- center: [50.1595037322732, -120.527647184937]
-- zoom: 10
+- center: [50.1595037322732, -120.327647184937]
+- zoom: 12
 ```
 ![LSIB](images/year2_9.jpg)
 
@@ -183,8 +183,8 @@ Youth running with feather, UNIB reserve
 
 #2010
 ```
-- center: [50.1409509889149, -120.583746934047]
-- zoom: 10
+- center: [50.1409509889149, -120.383746934047]
+- zoom: 12
 ```
 ![LSIB](images/year2_10.jpg)
 
@@ -192,8 +192,8 @@ Final group run at spaxomən – Douglas Lake
 
 #2010
 ```
-- center: [50.1433586371838, -120.583704362164]
-- zoom: 10
+- center: [50.1433586371838, -120.383704362164]
+- zoom: 12
 ```
 ![LSIB](images/year2_11.jpg)
 
