--- a/year3tour.html
+++ b/year3tour.html
@@ -49,8 +49,8 @@
   <div id="slides_container" style="display:block;">
     <div id = "wrapper" style="position:relative; margin-bottom:35px; height:100%; width:100%;">
         <div id = "corner" style="float:right">
-            <a id="smaller" href='#' style="margin-top:30px;display:none;" onclick="Shrink();"><< Smaller</a>
-            <a id= "expand" href='#' style="margin-top:30px;" onclick="Expand();">Expand >></a>
+            <a id="smaller" target="_self" href='#' style="margin-top:30px;" onclick="Shrink();"><< Smaller</a>
+            <a id= "expand" target="_self" href='#' style="margin-top:30px;display:none;" onclick="Expand();">Expand >></a>
         </div>
         <div id="dots"></div>
     
@@ -103,8 +103,8 @@
 ```
 #2011
 ```
-- center: [50.108209183423, -121.074694052498]
-- zoom: 10
+- center: [50.108209183423, -120.874694052498]
+- zoom: 12
 ```
 ![LSIB](images/year3_1.jpg)
 
@@ -112,8 +112,8 @@ Running through t’astxilintƏn - Merritt, BC
 
 #2011
 ```
-- center: [49.9237771233108, -120.928339949228]
-- zoom: 10
+- center: [49.9237771233108, -120.728339949228]
+- zoom: 12
 ```
 ![LSIB](images/year3_2.jpg)
 
@@ -121,8 +121,8 @@ Group photo at Aspen Grove Junction, BC
 
 #2011
 ```
-- center: [49.4620181407932, -120.779105087726]
-- zoom: 10
+- center: [49.4620181407932, -120.579105087726]
+- zoom: 12
 ```
 ![LSIB](images/year3_3.jpg)
 
@@ -130,8 +130,8 @@ akłtulʔmin to kłk’ər’míws - Run from Princeton to Keremeos, BC
 
 #2011
 ```
-- center: [49.2491621641297, -120.306609930809]
-- zoom: 10
+- center: [49.2491621641297, -120.106609930809]
+- zoom: 12
 ```
 ![LSIB](images/year3_4.jpg)
 
@@ -139,8 +139,8 @@ Cheering runners outside of kłk’ər’míws - Keremeos, BC
 
 #2011
 ```
-- center: [49.0239127924219, -119.986832466382]
-- zoom: 10
+- center: [49.0239127924219, -119.786832466382]
+- zoom: 12
 ```
 ![LSIB](images/year3_5.jpg)
 
@@ -148,8 +148,8 @@ Running through Crowsnest Trail past c’uṕaq - Chopaka
 
 #2011
 ```
-- center: [49.0787541517763, -119.861327562102]
-- zoom: 10
+- center: [49.0787541517763, -119.661327562102]
+- zoom: 12
 ```
 ![LSIB](images/year3_6.jpg)
 
@@ -157,8 +157,8 @@ kłlil’xw, Spotted Lake, BC
 
 #2011
 ```
-- center: [49.0327537945689, -119.767261239221]
-- zoom: 10
+- center: [49.0327537945689, -119.567261239221]
+- zoom: 12
 ```
 ![LSIB](images/year3_7.jpg)
 
@@ -166,8 +166,8 @@ Running through downtown  swíws - Osoyoos, BC
 
 #2011
 ```
-- center: [49.0138783068604, -119.096244183098]
-- zoom: 10
+- center: [49.0138783068604, -118.896244183098]
+- zoom: 12
 ```
 ![LSIB](images/year3_8.jpg)
 
@@ -175,8 +175,8 @@ Running along the snxwyałpítkw – Kettle River by Midway, BC
 
 #2011
 ```
-- center: [49.002891770702, -118.829620632349]
-- zoom: 10
+- center: [49.002891770702, -118.629620632349]
+- zoom: 12
 ```
 ![LSIB](images/year3_9.jpg)
 
@@ -184,8 +184,8 @@ Running down into nk’mcinm – Grand Forks, BC
 
 #2011
 ```
-- center: [49.0185938445579, -118.789270677299]
-- zoom: 10
+- center: [49.0185938445579, -118.589270677299]
+- zoom: 12
 ```
 ![LSIB](images/year3_10.jpg)
 
@@ -193,8 +193,8 @@ Cheering the runners in nk’mcinm – Grand Forks, BC
 
 #2011
 ```
-- center: [49.0434834118894, -118.518952493763]
-- zoom: 10
+- center: [49.0434834118894, -118.318952493763]
+- zoom: 12
 ```
 ![LSIB](images/year3_11.jpg)
 
