--- a/year4tour.html
+++ b/year4tour.html
@@ -49,8 +49,8 @@
   <div id="slides_container" style="display:block;">
     <div id = "wrapper" style="position:relative; margin-bottom:35px; height:100%; width:100%;">
         <div id = "corner" style="float:right">
-            <a id="smaller" href='#' style="margin-top:30px;display:none;" onclick="Shrink();"><< Smaller</a>
-            <a id= "expand" href='#' style="margin-top:30px;" onclick="Expand();">Expand >></a>
+            <a id="smaller" target="_self" href='#' style="margin-top:30px;" onclick="Shrink();"><< Smaller</a>
+            <a id= "expand" target="_self" href='#' style="margin-top:30px;display:none;" onclick="Expand();">Expand >></a>
         </div>
         <div id="dots"></div>
     
@@ -103,8 +103,8 @@
 ```
 #2012
 ```
-- center: [49.3071832082886, -117.935217871867]
-- zoom: 10
+- center: [49.3071832082886, -117.735217871867]
+- zoom: 12
 ```
 ![LSIB](images/year4_1.jpg)
 
@@ -112,8 +112,8 @@ Spirit of Syilx Unity Run through snłuʔqnm - Castlegar, BC
 
 #2012
 ```
-- center: [49.4132095706553, -117.838379430592]
-- zoom: 10
+- center: [49.4132095706553, -117.638379430592]
+- zoom: 12
 ```
 ![LSIB](images/year4_2.jpg)
 
@@ -121,8 +121,8 @@ Youth Running on the tmxwúlaʔxw - the Land
 
 #2012
 ```
-- center: [49.4596022838256, -117.863761293354]
-- zoom: 10
+- center: [49.4596022838256, -117.663761293354]
+- zoom: 12
 ```
 ![LSIB](images/year4_3.jpg)
 
@@ -130,8 +130,8 @@ Running along stuʔkluxw – on the lower Slocan River with special guest Alvina
 
 #2012
 ```
-- center: [49.5798115235636, -117.912246092815]
-- zoom: 10
+- center: [49.5798115235636, -117.712246092815]
+- zoom: 12
 ```
 ![LSIB](images/year4_4.jpg)
 
@@ -139,8 +139,8 @@ Singing for the runners in nkwi?uxwtn – east side of Slocan Valley near Vallic
 
 #2012
 ```
-- center: [49.9667760395645, -117.660966843257]
-- zoom: 10
+- center: [49.9667760395645, -117.460966843257]
+- zoom: 12
 ```
 ![LSIB](images/year4_5.jpg)
 
@@ -148,8 +148,8 @@ Running along takł’yckst – Slocan Lake
 
 #2012
 ```
-- center: [50.1170179604427, -117.802915491684]
-- zoom: 10
+- center: [50.1170179604427, -117.602915491684]
+- zoom: 12
 ```
 ![LSIB](images/year4_6.jpg)
 
@@ -157,8 +157,8 @@ Having fun while running through snk’Əmíp – head of Slocan Lake
 
 #2012
 ```
-- center: [50.2545332823097, -118.117350052906]
-- zoom: 10
+- center: [50.2545332823097, -117.917350052906]
+- zoom: 12
 ```
 ![LSIB](images/year4_7.jpg)
 
@@ -166,8 +166,8 @@ Youth excited to run in nqwaysp – Nakusp, BC
 
 #2012
 ```
-- center: [50.8935680932486, -118.4726341504]
-- zoom: 10
+- center: [50.8935680932486, -118.2726341504]
+- zoom: 12
 ```
 ![LSIB](images/year4_8.jpg)
 
@@ -175,8 +175,8 @@ Running along nk’mapəlqs – head of Upper Arrow lake
 
 #2012
 ```
-- center: [51.0489466333727, -118.494877405765]
-- zoom: 10
+- center: [51.0489466333727, -118.294877405765]
+- zoom: 12
 ```
 ![LSIB](images/year4_9.jpg)
 
@@ -184,8 +184,8 @@ Closing circle on nƛ̓qmitkw – the Columbia River
 
 #2012
 ```
-- center: [51.0489043015803, -118.495124574115]
-- zoom: 10
+- center: [51.0489043015803, -118.295124574115]
+- zoom: 12
 ```
 ![LSIB](images/year4_10.jpg)
 
