--- a/year5tour.html
+++ b/year5tour.html
@@ -49,8 +49,8 @@
   <div id="slides_container" style="display:block;">
     <div id = "wrapper" style="position:relative; margin-bottom:35px; height:100%; width:100%;">
         <div id = "corner" style="float:right">
-            <a id="smaller" href='#' style="margin-top:30px;display:none;" onclick="Shrink();"><< Smaller</a>
-            <a id= "expand" href='#' style="margin-top:30px;" onclick="Expand();">Expand >></a>
+            <a id="smaller" target="_self" href='#' style="margin-top:30px;" onclick="Shrink();"><< Smaller</a>
+            <a id= "expand" target="_self" href='#' style="margin-top:30px;display:none;" onclick="Expand();">Expand >></a>
         </div>
         <div id="dots"></div>
     
@@ -103,8 +103,8 @@
 ```
 #2013
 ```
-- center: [51.0489399421902, -118.494910738141]
-- zoom: 10
+- center: [51.0489399421902, -118.294910738141]
+- zoom: 12
 ```
 ![LSIB](images/year5_1.jpg)
 
@@ -113,8 +113,8 @@ Opening at Revelstoke Dam on nƛ̓qmitkw – the Columbia River
 
 #2013
 ```
-- center: [51.0459748664011, -118.497543821266]
-- zoom: 10
+- center: [51.0459748664011, -118.297543821266]
+- zoom: 12
 ```
 ![LSIB](images/year5_2.jpg)
 
@@ -122,8 +122,8 @@ Running with the feather across from skexi’kenten on the east side of the Colu
 
 #2013
 ```
-- center: [51.0298755586683, -118.509797769609]
-- zoom: 10
+- center: [51.0298755586683, -118.309797769609]
+- zoom: 12
 ```
 ![LSIB](images/year5_3.jpg)
 
@@ -131,8 +131,8 @@ Waiting to run along nƛ̓qmitkw – the Columbia River
 
 #2013
 ```
-- center: [51.0040684185144, -118.523548143542]
-- zoom: 10
+- center: [51.0040684185144, -118.323548143542]
+- zoom: 12
 ```
 ![LSIB](images/year5_4.jpg)
 
@@ -140,8 +140,8 @@ Singing for the runners south of skxikntn – the mouth of Tonkawatla Creek
 
 #2013
 ```
-- center: [50.9983989690263, -118.988223130708]
-- zoom: 10
+- center: [50.9983989690263, -118.788223130708]
+- zoom: 12
 ```
 ![LSIB](images/year5_5.jpg)
 
@@ -149,8 +149,8 @@ Running through  Craigellachie
 
 #2013
 ```
-- center: [50.9765212548867, -119.023321278758]
-- zoom: 10
+- center: [50.9765212548867, -118.823321278758]
+- zoom: 12
 ```
 ![LSIB](images/year5_6.jpg)
 
@@ -158,8 +158,8 @@ Afternoon circle prayer
 
 #2013
 ```
-- center: [50.7496901177485, -119.324945614855]
-- zoom: 10
+- center: [50.7496901177485, -119.124945614855]
+- zoom: 12
 ```
 ![LSIB](images/year5_7.jpg)
 
@@ -167,8 +167,8 @@ Waiting to Run by the siwłkw
 
 #2013
 ```
-- center: [50.3494932093947, -119.596841986038]
-- zoom: 10
+- center: [50.3494932093947, -119.396841986038]
+- zoom: 12
 ```
 ![LSIB](images/year5_8.jpg)
 
@@ -176,8 +176,8 @@ Planning at nk’mapəlqs
 
 #2013
 ```
-- center: [50.360725258355, -119.586031773076]
-- zoom: 10
+- center: [50.360725258355, -119.386031773076]
+- zoom: 12
 ```
 ![LSIB](images/year5_9.jpg)
 
@@ -185,8 +185,8 @@ nk’mapəlqs - Head of the Lake, Vernon, BC
 
 #2013
 ```
-- center: [50.2321267516219, -119.585055615393]
-- zoom: 10
+- center: [50.2321267516219, -119.385055615393]
+- zoom: 12
 ```
 ![LSIB](images/year5_10.jpg)
 
@@ -194,8 +194,8 @@ Running through nłƏłtpmúscin – Vernon, BC
 
 #2013
 ```
-- center: [49.8405271711723, -119.893152129316]
-- zoom: 10
+- center: [49.8405271711723, -119.693152129316]
+- zoom: 12
 ```
 ![LSIB](images/year5_11.jpg)
 
@@ -203,8 +203,8 @@ Final group run to finish at sənsisyustən House of Learning in stqaɁtkwəłni
 
 #2013
 ```
-- center: [49.8406477724074, -119.895809206842]
-- zoom: 10
+- center: [49.8406477724074, -119.695809206842]
+- zoom: 12
 ```
 ![LSIB](images/year5_12.jpg)
 
