--- a/year7tour.html
+++ b/year7tour.html
@@ -47,8 +47,8 @@
   <div id="slides_container" style="display:block;">
     <div id = "wrapper" style="position:relative; margin-bottom:35px; height:100%; width:100%;">
         <div id = "corner" style="float:right">
-            <a id="smaller" href='#' style="margin-top:30px;display:none;" onclick="Shrink();"><< Smaller</a>
-            <a id= "expand" href='#' style="margin-top:30px;" onclick="Expand();">Expand >></a>
+            <a id="smaller" target="_self" href='#' style="margin-top:30px;" onclick="Shrink();"><< Smaller</a>
+            <a id= "expand" target="_self" href='#' style="margin-top:30px;display:none;" onclick="Expand();">Expand >></a>
         </div>
         <div id="dots"></div>
     
@@ -102,8 +102,8 @@
 
 #2015
 ```
-- center: [48.4098112399138, -119.816865017857]
-- zoom: 10
+- center: [48.4098112399138, -119.616865017857]
+- zoom: 12
 ```
 ![LSIB](images/year7_1.jpg)
 
@@ -112,8 +112,8 @@ Running from powwow grounds
 
 #2015
 ```
-- center: [48.2982920831794, -119.731472024421]
-- zoom: 10
+- center: [48.2982920831794, -119.531472024421]
+- zoom: 12
 ```
 ![LSIB](images/year7_2.jpg)
 
@@ -121,8 +121,8 @@ Running past Omak lake, Omak, WA, USA
 
 #2015
 ```
-- center: [48.1342079647704, -119.622230642913]
-- zoom: 10
+- center: [48.1342079647704, -119.422230642913]
+- zoom: 12
 ```
 ![LSIB](images/year7_3.jpg)
 
@@ -130,8 +130,8 @@ Goose Lake
 
 #2015
 ```
-- center: [48.1517564244359, -119.438087948345]
-- zoom: 10
+- center: [48.1517564244359, -119.238087948345]
+- zoom: 12
 ```
 ![LSIB](images/year7_4.jpg)
 
@@ -139,8 +139,8 @@ Running along the nƛ̓qmitkw – the Columbia River
 
 #2015
 ```
-- center: [48.1358846236373, -119.280357881215]
-- zoom: 10
+- center: [48.1358846236373, -119.080357881215]
+- zoom: 12
 ```
 ![LSIB](images/year7_5.jpg)
 
@@ -148,8 +148,8 @@ Morning Circle at Nespelem Community Center with special guest Waylon Pahona, fo
 
 #2015
 ```
-- center: [48.0777668942931, -118.983164277201]
-- zoom: 10
+- center: [48.0777668942931, -118.783164277201]
+- zoom: 12
 ```
 ![LSIB](images/year7_6.jpg)
 
@@ -157,8 +157,8 @@ Running through kłʔíʔtxwaʔ - Keller, WA, USA
 
 #2015
 ```
-- center: [48.0784652657692, -118.984238557746]
-- zoom: 10
+- center: [48.0784652657692, -118.784238557746]
+- zoom: 12
 ```
 ![LSIB](images/year7_7.jpg)
 
@@ -166,8 +166,8 @@ Run in progress signs at kłʔíʔtxwaʔ - Keller, WA, USA
 
 #2015
 ```
-- center: [48.2250449347365, -118.982699521458]
-- zoom: 10
+- center: [48.2250449347365, -118.782699521458]
+- zoom: 12
 ```
 ![LSIB](images/year7_8.jpg)
 
@@ -175,8 +175,8 @@ Running past a captikwl landmark
 
 #2015
 ```
-- center: [48.2360064462806, -118.861428243634]
-- zoom: 10
+- center: [48.2360064462806, -118.661428243634]
+- zoom: 12
 ```
 ![LSIB](images/year7_9.jpg)
 
@@ -184,8 +184,8 @@ Running through Bridge Creek Road to skƏłqílt - Inchelium, WA, USA
 
 #2015
 ```
-- center: [48.288341182513, -118.57787136377]
-- zoom: 10
+- center: [48.288341182513, -118.37787136377]
+- zoom: 12
 ```
 ![LSIB](images/year7_10.jpg)
 
@@ -193,8 +193,8 @@ Running down to skƏłqílt - Inchliuem, WA, USA
 
 #2015
 ```
-- center: [48.6308911615881, -118.407434346931]
-- zoom: 10
+- center: [48.6308911615881, -118.207434346931]
+- zoom: 12
 ```
 ![LSIB](images/year7_11.jpg)
 
@@ -202,8 +202,8 @@ At the sharpening stone in s’wənítkw - Kettle Falls, WA, USA
 
 #2015
 ```
-- center: [49.0008839638951, -118.523387200109]
-- zoom: 10
+- center: [49.0008839638951, -118.323387200109]
+- zoom: 12
 ```
 ![LSIB](images/year7_12.jpg)
 
@@ -211,8 +211,8 @@ Entering Canada at the Laurier Border Crossing
 
 #2015
 ```
-- center: [49.0434550069213, -118.518790660846]
-- zoom: 10
+- center: [49.0434550069213, -118.318790660846]
+- zoom: 12
 ```
 ![LSIB](images/year7_13.jpg)
 
