--- a/year6tour.html
+++ b/year6tour.html
@@ -54,8 +54,8 @@
   <div id="slides_container" style="display:block;">
     <div id = "wrapper" style="position:relative; margin-bottom:35px; height:100%; width:100%;">
         <div id = "corner" style="float:right">
-            <a id="smaller" href='#' style="margin-top:30px;display:none;" onclick="Shrink();"><< Smaller</a>
-            <a id= "expand" href='#' style="margin-top:30px;" onclick="Expand();">Expand >></a>
+            <a id="smaller" target="_self" href='#' style="margin-top:30px;" onclick="Shrink();"><< Smaller</a>
+            <a id= "expand" target="_self" href='#' style="margin-top:30px;display:none;" onclick="Expand();">Expand >></a>
         </div>
         <div id="dots"></div>
     
@@ -108,8 +108,8 @@
 ```
 #2014
 ```
-- center: [49.8409351211345, -119.896319832786]
-- zoom: 10
+- center: [49.8409351211345, -119.696319832786]
+- zoom: 12
 ```
 ![LSIB](images/year6_1.jpg)
 
@@ -117,8 +117,8 @@ Morning prayer at sənsisyustən House of Learning , stqaɁtkwəłniwt - Tsinsti
 
 #2014
 ```
-- center: [49.7838770546095, -120.016644288915]
-- zoom: 10
+- center: [49.7838770546095, -118.816644288915]
+- zoom: 12
 ```
 ![LSIB](images/year6_2.jpg)
 
@@ -126,8 +126,8 @@ Running through k’əłpəlmapqən - Peachland, BC
 
 #2014
 ```
-- center: [49.6564179094488, -119.999955507109]
-- zoom: 10
+- center: [49.6564179094488, -119.799955507109]
+- zoom: 12
 ```
 ![LSIB](images/year6_3.jpg)
 
@@ -135,8 +135,8 @@ Running to to k’łchink - Summerland, BC
 
 #2014
 ```
-- center: [49.4318776489521, -119.912309659531]
-- zoom: 10
+- center: [49.4318776489521, -119.712309659531]
+- zoom: 12
 ```
 ![LSIB](images/year6_4.jpg)
 
@@ -144,8 +144,8 @@ Waiting to Run along q’awst’ik’wt – Skaha Lake
 
 #2014
 ```
-- center: [49.2541048467269, -119.82607819155]
-- zoom: 10
+- center: [49.2541048467269, -119.62607819155]
+- zoom: 12
 ```
 ![LSIB](images/year6_5.jpg)
 
@@ -153,8 +153,8 @@ Running past nʕaylintən - McIntyre Bluff
 
 #2014
 ```
-- center: [49.2173783866808, -119.987641216854]
-- zoom: 10
+- center: [49.2173783866808, -119.787641216854]
+- zoom: 12
 ```
 ![LSIB](images/year6_6.jpg)
 
@@ -162,8 +162,8 @@ Running over through txesqin – Mount Kobau to Blind Creek
 
 #2014
 ```
-- center: [49.0001074916092, -119.970899072492]
-- zoom: 10
+- center: [49.0001074916092, -119.770899072492]
+- zoom: 12
 ```
 ![LSIB](images/year6_7.jpg)
 
@@ -171,8 +171,8 @@ Running through Nighthawk border crossing
 
 #2014
 ```
-- center: [48.8740962243199, -119.918194055066]
-- zoom: 10
+- center: [48.8740962243199, -119.718194055066]
+- zoom: 12
 ```
 ![LSIB](images/year6_8.jpg)
 
@@ -180,8 +180,8 @@ Running past Palmer Lake, WA, USA
 
 #2014
 ```
-- center: [48.8217734986273, -119.931961441145]
-- zoom: 10
+- center: [48.8217734986273, -119.731961441145]
+- zoom: 12
 ```
 ![LSIB](images/year6_9.jpg)
 
@@ -189,8 +189,8 @@ Running through Loomis, WA, USA
 
 #2014
 ```
-- center: [48.5104845177751, -119.818125092419]
-- zoom: 10
+- center: [48.5104845177751, -119.618125092419]
+- zoom: 12
 ```
 ![LSIB](images/year6_10.jpg)
 
@@ -198,8 +198,8 @@ Running to Omak, WA, USA (outside of Riverside)
 
 #2014
 ```
-- center: [48.4083494303581, -119.818674138725]
-- zoom: 10
+- center: [48.4083494303581, -119.618674138725]
+- zoom: 12
 ```
 ![LSIB](images/year6_11.jpg)
 
