more final edits

--- a/nationstour.html
+++ b/nationstour.html
@@ -108,7 +108,7 @@
 ```
 ### Welcome to the Okanagan Nation territory. Explore the member communities that make up the Okanagan Nation.
 
-## Okanagan Nation alliance
+## Okanagan Nation Alliance
 ## #101, 3535 Old Okanagan Hwy
 ## Westbank, BC
 ## V4T 3L7
@@ -127,7 +127,7 @@ Chief: Harvey McLeod
 
 Comprised of 8 reserves throughout the land base of 1600 hectares  
 
-[www.uppernicolaband.com](http://www.uppernicolaband.com)
+[www.uppernicola.com](http://www.uppernicola.com)
 
 ## PO Box 3700
 ## Merritt, BC V1K 1B8
@@ -146,7 +146,7 @@ Chief: Bryon Louis
 
 The Okanagan Indian Band is located at the head of the Okanagan Lake which consists of six reserves.  1800’s was the time of Okanagan Ancestors first encounter with European fur traders.
 
-[www.okib.com](http://www.okib.com)
+[www.okib.ca](http://www.okib.ca)
 
 ## 12420 Westside Road
 ## Vernon, BC V1H 2A4
