--- a/year1tour.html
+++ b/year1tour.html
@@ -144,7 +144,7 @@ k’łchink to snpíntktn – Summerland to Penticton, BC
 ```
 ![LSIB](images/year1_5.jpg)
 
-Run from Penticton to Keremeos 
+snpíntktn to kłk’ər’míws – Run from Penticton to Keremeos 
 
 #2009
 ```
