--- a/coyotetour/index.html
+++ b/coyotetour/index.html
@@ -12,9 +12,9 @@
   <link rel="stylesheet" href="http://cartodb-libs.global.ssl.fastly.net/cartodb.js/v3/themes/css/cartodb.css">
   <link rel="stylesheet" href="odyssey/sandbox/css/slides.css">
   <script src="odyssey/vendor/modernizr-2.6.2.min.js"></script>
- 
-
- <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+  
+  
+  <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
 	<link rel="stylesheet" href="leaflet/leaflet.css" />
 	<script src="leaflet/leaflet.js"></script>
 
@@ -45,7 +45,7 @@
 <body>
   <div id="map" style="width: 100%; height: 100%;"></div>
 
-  <div id="slides_container" style="display:block;">
+   <div id="slides_container" style="display:block;">
     <div id = "wrapper" style="position:relative; margin-bottom:35px; height:100%; width:100%;">
         <div id = "corner" style="float:right">
             <a id="smaller" target="_self" href='#' style="margin-top:30px;" onclick="Shrink();"><< Smaller</a>
@@ -80,8 +80,8 @@
   <script src = "js/slidestuff.js"></script>
   <script src="js/styles.js"></script>
   <script src="js/layers.js"></script>
-  <script src='js/lakestemplate.js'></script>
-  
+  <script src='js/coyotetemplate.js'></script>
+
 
   <!--<script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -101,90 +101,138 @@
 -author: "ecotrust"
 ```
 
-# **iɁ kwu syilx iɁ siwłkwtət** – “our syilx water”
+#Coyote Landmark Areas
 ```
-- center: [50.2, -121.1]
+- center: [50.485316, -119.518520]
 - zoom: 7
 ```
 
-Syilx communities have always recognized and nurtured a strong connection toward siwlkw (water).  The importance of siwlkw in Syilx communities is related through captikwl and the natural laws.  Click on the arrows below to view some important water bodies within the territory.
+In our histories we are told that the creator sent sen’k’lip (coyote), to help our people survive on this land. sen’k’lip’s travels are a record of the natural laws necessary for our Syilx people to survive and essential to our ability to carry on. Click on the arrows below to tour the landmarks. 
 
-# **ntx̌ʷitkʷ** • Columbia River 
+#Coyote at Stump Lake
 ```
-- center: [49.73, -120.65]
-- zoom: 7
-```
-![water](images/columbiariver.jpg)
-
-# **nxʷyaɬpítkʷ** • Kettle River
-```
-- center: [49.31, -119.15]
-- zoom: 10
-```
-![water](images/kettleriver.jpg)
-
-# **nxʷyntkʷitkʷ** • Granby River
-```
-- center: [49.33, -118.66]
-- zoom: 10
-```
-
-
-# **nməlqaytkw** • Similkameen River
-```
-- center: [49.22, -120.37]
-- zoom: 10
-```
-![water](images/similkameenriver.jpg)
-
-Photo by Lower Similkameen Indian Band
-
-# **nx̌waqwaʔstn** • Mission Creek
-```
-- center: [49.9, -119.2]
+- center: [50.39, -120.39]
 - zoom: 11
 ```
 
-![water](images/missioncreek.jpg)
 
-# **kɬúsx̌nítkw** • Okanagan Lake
+#Coyote's Canoe
 ```
-- center: [49.95, -119.61]
-- zoom: 10
-```
-
-![water](images/okanaganlake.jpg)
-
-# **sal’t’ik’ʷt** • Arrow Lakes
-```
-- center: [50.3, -118.4]
-- zoom: 9
-```
-![water](images/arrowlakes.jpg)
-
-# **kɬlílxw** • Spotted Lake
-```
-- center: [49.078, -119.57]
-- zoom: 15
+- center: [50.47, -119.7]
+- zoom: 11
 ```
 
-![water](images/spottedlake.jpg)
 
-
-# **spaxmən** • Douglas Lake
+#Pillar Rock
 ```
-- center: [50.14, -120.3]
-- zoom: 13
+- center: [50.6, -119.69]
+- zoom: 11
 ```
 
-![water](images/douglaslake.jpg)
 
-# **nk’mip** • Osoyoos Lake
+#Coyote Tribute Rock
 ```
-- center: [49.02, -119.53]
+- center: [50.35, -119.37]
+- zoom: 11
+```
+
+
+#Coyote's House
+```
+- center: [50.43, -118.78]
+- zoom: 11
+```
+
+
+#Coyote's Fishing Stand
+```
+- center: [50.3, -118.85]
+- zoom: 11
+```
+
+
+#Coyote's Tower
+```
+- center: [49.84, -119.4]
+- zoom: 11
+```
+
+
+#Coyote Tribute Rock
+```
+- center: [49.42, -119.72]
 - zoom: 12
 ```
 
-![water](images/osoyooslake.jpg)
+
+
+#Owl Rock
+```
+- center: [49.4, -119.72]
+- zoom: 12
+```
+
+
+#Coyote's Teepee
+```
+- center: [49.38, -119.64]
+- zoom: 12
+```
+
+
+#Coyote's Winter Lodge
+```
+- center: [49.35, -119.61]
+- zoom: 13
+```
+
+#Coyote Landmark
+```
+- center: [49.35, -119.61]
+- zoom: 13
+```
+
+
+#Coyote on Horseback with Dog
+```
+- center: [49.26, -119.55]
+- zoom: 12
+```
+
+
+
+#Coyote's Fishing Station
+```
+- center: [49.23, -120.04]
+- zoom: 12
+```
+
+
+#Coyote's Intestines
+```
+- center: [49.23, -120.03]
+- zoom: 12
+```
+
+
+#Coyote Tribute Rock
+```
+- center: [49.25, -120.05]
+- zoom: 12
+```
+
+
+
+#Coyote Tribute Rock
+```
+- center: [49.28, -120.08]
+- zoom: 12
+```
+
+#Land Point - Where Names were Given
+```
+- center: [48.2, -118.7]
+- zoom: 9
+```
 
 </script></body></html>
